paginas de detalles

--- a/src/main/resources/static/web/assets/style/style.css
+++ b/src/main/resources/static/web/assets/style/style.css
@@ -45,6 +45,10 @@ background-color: rgba(219, 219, 219, 0.315) !important;
     box-shadow: 2px 2px 3px 1px rgb(152, 150, 150) !important;
 }
 
+/* .card-image-me:hover{
+    transform: rotateY(180deg)
+} */
+
 .product-detail {
     width: 360px;
     padding: 24px;
