--- a/src/main/resources/static/web/assets/style/style.css
+++ b/src/main/resources/static/web/assets/style/style.css
@@ -226,6 +226,9 @@ background-color: rgba(219, 219, 219, 0.315) !important;
     padding-bottom: 13px;
     color: #3483fa;
 }
+.text-decoration-none{
+  color: #999;
+}
 
 .ajax-cart-item {
     overflow: hidden;
@@ -417,4 +420,272 @@ background-color: rgba(219, 219, 219, 0.315) !important;
         width: 100%;
         padding: 20px 10px
     }
+}
+
+/* checkout */
+
+body,
+html {
+  height: 100%;
+  margin: 0;
+  font-family: lato;
+}
+
+h2 {
+  margin-bottom: 0px;
+  margin-top: 25px;
+  text-align: center;
+  font-weight: 200;
+  font-size: 19px;
+  font-size: 1.2rem;
+}
+
+.container {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.dropdown-select.visible {
+  display: block;
+}
+
+.dropdown {
+  position: relative;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+ul li {
+  list-style: none;
+  padding-left: 10px;
+  cursor: pointer;
+}
+
+ul li:hover {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+.dropdown-select {
+  position: absolute;
+  background: #77aaee;
+  text-align: left;
+  box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.1);
+  border-bottom-right-radius: 5px;
+  border-bottom-left-radius: 5px;
+  width: 90%;
+  left: 2px;
+  line-height: 2em;
+  margin-top: 2px;
+  box-sizing: border-box;
+}
+
+.thin {
+  font-weight: 400;
+}
+
+.small {
+  font-size: 12px;
+  font-size: 0.8rem;
+}
+
+.half-input-table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.half-input-table td:first-of-type {
+  border-right: 10px solid var(--color4);
+  width: 50%;
+}
+
+.window {
+  height: 100%;
+  width: 80%;
+  background: #fff;
+  display: flex;
+  box-shadow: 0px 15px 50px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 30px;
+  z-index: 10;
+}
+
+.order-info {
+  height: 100%;
+  width: 50%;
+  padding-left: 25px;
+  padding-right: 25px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+
+}
+.price {
+  bottom: 15px;
+  position: absolute;
+  right: 0px;
+  color: var(--color4);
+  font-weight: 500;
+}
+
+.order-table td:first-of-type {
+  width: 25%;
+}
+
+.order-table {
+  position: relative;
+}
+
+.line {
+  height: 1px;
+  width: 100%;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  background: #ddd;
+}
+
+.order-table td:last-of-type {
+  vertical-align: top;
+  padding-left: 25px;
+}
+
+.order-info-content {
+  table-layout: fixed;
+  margin: 1rem;
+}
+
+.full-width {
+  width: 100%;
+}
+
+.pay-btn {
+  border: none;
+  background: var(--color3);
+  line-height: 2em;
+  border-radius: 10px;
+  font-size: 19px;
+  font-size: 1.2rem;
+  color: #fff;
+  cursor: pointer;
+  position: absolute;
+  bottom: 25px;
+  width: calc(100% - 50px);
+  transition: all 0.2s ease;
+}
+
+.pay-btn:hover {
+  background: #d00f49;
+  color: #eee;
+  transition: all 0.2s ease;
+}
+
+.total {
+  margin-top: 25px;
+  font-size: 20px;
+  font-size: 1.3rem;
+  bottom: 30px;
+  right: 27px;
+  left: 35px;
+}
+
+.dense {
+  line-height: 1.2em;
+  font-size: 16px;
+  font-size: 1rem;
+}
+
+.input-field {
+  background: rgba(255, 255, 255, 0.1);
+  margin-bottom: 10px;
+  margin-top: 3px;
+  line-height: 1.5em;
+  font-size: 1rem;
+  border: none;
+  padding: 5px 10px 5px 10px;
+  color: #fff;
+  box-sizing: border-box;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.credit-info {
+  background: var(--color4);
+  min-height: 50rem;
+  width: 50%;
+  color: #eee;
+  display: flex;
+  justify-content: space-around;
+  font-size: 14px;
+  font-size: 0.9rem;
+  box-sizing: border-box;
+  padding-left: 25px;
+  padding-right: 25px;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
+  position: relative;
+}
+
+.dropdown-btn {
+  background: rgba(255, 255, 255, 0.1);
+  width: 100%;
+  border-radius: 5px;
+  text-align: center;
+  line-height: 1.5em;
+  cursor: pointer;
+  position: relative;
+  transition: background 0.2s ease;
+}
+
+.dropdown-btn:after {
+  content: '\25BE';
+  right: 8px;
+  position: absolute;
+}
+
+.dropdown-btn:hover {
+  background: rgba(255, 255, 255, 0.2);
+  transition: background 0.2s ease;
+}
+
+.dropdown-select {
+  display: none;
+}
+
+.credit-card-image {
+  display: block;
+  max-height: 130px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+}
+
+.credit-info-content {
+  margin-top: 25px;
+  flex-flow: column;
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
+
+@media (max-width: 600px) {
+  .window {
+    width: 100%;
+    height: 100%;
+    display: block;
+    border-radius: 0px;
+  }
+  .order-info,
+  .credit-info {
+    width: 100%;
+    height: auto;
+    padding-bottom: 100px;
+    border-radius: 0px;
+  }
+  .pay-btn {
+    border-radius: 0px;
+  }
 }
